swaggerの実装(groupsの実装が完了)
