# public/swagger-memory-shared/openapi.json
@@ -278,6 +278,61 @@
                 "produces": [
                     "application/json"
                 ]
+            },
+            "delete": {
+                "tags": [
+                    "groups"
+                ],
+                "description": "グループデータを論理削除する",
+                "operationId": "App\\Http\\Controllers\\Api\\GroupController::destroy",
+                "parameters": [
+                    {
+                        "name": "group",
+                        "in": "path",
+                        "description": "グループID",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success / 論理削除成功のメッセージを表示",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "info_message": {
+                                            "description": "論理削除成功のメッセージを表示",
+                                            "type": "string",
+                                            "example": "グループの削除が完了しました"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Server error / サーバエラー用のメッセージを表示",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error_message": {
+                                            "description": "サーバエラー用のメッセージを表示",
+                                            "type": "string",
+                                            "example": "サーバーエラーによりグループの削除に失敗しました。管理者にお問い合わせください"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "produces": [
+                    "application/json"
+                ]
             }
         },
         "api/groups/validate": {
@@ -328,6 +383,65 @@
                                     "properties": {
                                         "errors": {
                                             "$ref": "#/components/schemas/group_errors"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "produces": [
+                    "application/json"
+                ]
+            }
+        },
+        "api/groups/{group}/users": {
+            "get": {
+                "tags": [
+                    "groups"
+                ],
+                "description": "指定したグループに参加しているユーザ情報をすべて取得する",
+                "operationId": "App\\Http\\Controllers\\Api\\GroupController::participating",
+                "parameters": [
+                    {
+                        "name": "group",
+                        "in": "path",
+                        "description": "グループID",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success / グループ一覧画面からアクセスしたグループ詳細ページに、そのグループに参加しているユーザ情報をusersテーブルから取得して表示",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "pusers": {
+                                            "description": "グループ一覧画面からアクセスしたグループ詳細ページに、そのグループに参加しているユーザ情報をusersテーブルから取得して表示",
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/group_users_info"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Server error / サーバエラー用のメッセージを表示",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "error_message": {
+                                            "description": "サーバエラー用のメッセージを表示",
+                                            "type": "string",
+                                            "example": "ユーザ情報を取得出来ませんでした"
                                         }
                                     },
                                     "type": "object"
@@ -1604,6 +1718,28 @@
                             }
                         },
                         "type": "object"
+                    }
+                },
+                "type": "object"
+            },
+            "group_users_info": {
+                "required": [
+                    "id",
+                    "name",
+                    "image_file"
+                ],
+                "properties": {
+                    "id": {
+                        "type": "integer",
+                        "example": "8"
+                    },
+                    "name": {
+                        "type": "string",
+                        "example": "test group 8"
+                    },
+                    "image_file": {
+                        "type": "string",
+                        "example": "xxxxoooo.png"
                     }
                 },
                 "type": "object"
